sdk/tests/compile-fail/account_desc_name.stderr
error: unrecognized account detail
  --> $DIR/account_desc_name.rs:10:17
   |
10 |         account(doc = "Account")
   |                 ^^^^^^^^^^^^^^^
